// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control Button renders empty control button correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-item"
>
  <button
    aria-describedby={null}
    className="MuiButtonBase-root MuiIconButton-root WithStyles(ForwardRef(IconButton))-root-112"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    title=""
    type="button"
  >
    <span
      className="MuiIconButton-label"
    />
    <span
      className="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Control Button renders full control button correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-item"
>
  <button
    aria-describedby={null}
    className="MuiButtonBase-root MuiIconButton-root WithStyles(ForwardRef(IconButton))-root-112"
    disabled={false}
    onBlur={[Function]}
    onClick={[MockFunction]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    title="Tooltip"
    type="button"
  >
    <span
      className="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.46 20 9.5V4h-5.5zm.33 9.41l-1.41 1.41 3.13 3.13L14.5 20H20v-5.5l-2.04 2.04-3.13-3.13z"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
</div>
`;
